--- a/agenda/index.html
+++ b/agenda/index.html
@@ -15,8 +15,8 @@
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning how to make galleries
-                            content layouts.
+                            Today we'll be working on our Personal
+                            Portfolio Site | Project.
                         </p>
                     </div>
 
@@ -24,15 +24,8 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start with a demo on galleries.
-                            </li>
-                            <li>
-                                Then we have a powerpoint on galleries.
-                            </li>
-                            <li>
-                                After a short break, we'll have
-                                the rest of class to work on the
-                                Themed Gallery Page Exercise.
+                                We'll spend the whole class working on
+                                Personal Portfolio Site | Project.
                             </li>
                         </ul>
                     </div>
@@ -40,11 +33,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            What is your biggest pet peeve when browsing
-                            the internet?
+                            Would you eat lab grown meat? Would you consider
+                            it lab grown meat vegetarian, vegan, or neither?
                             <span>
                                 <i><br>
-                                    (e.g.: n/a)
+                                    (e.g.: Lab Grown Salmon cooked in a Dishwasher, yum!)
                                 </i>
                             </span>
                         </p>
@@ -63,10 +56,10 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Over her lifetime, a cat called Dusty had
-                            a total of 420 kittens.
+                            — The Moon is shrinking.
                         </p>
                         <p class="additional-info">
+                            But only very slightly – by about 50m (164ft) in radius over the last several hundred million years. Mysterious seismic activity, known as moonquakes, could be to blame.
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
