--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,16 +57,38 @@
                 </div>
                 <div class="contain">
                     <div class="gal">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="images/img1.jpg" alt="yes yes yes!">
+                        <div class="img-overlay"></div>
+                        <img src="images/img2.jpg" alt="yes yes yes!">
+                        <div class="img-overlay"></div>
+                        <img src="images/img3.jpg" alt="yes yes yes!">
+                        <div class="img-overlay"></div>
+                        <img src="images/img4.jpg" alt="yes yes yes!">
+                        <div class="img-overlay"></div>
+                        <img src="images/img5.jpg" alt="yes yes yes!">
+                        <div class="img-overlay"></div>
+                        <img src="images/img6.jpg" alt="yes yes yes!">
+                        <div class="img-overlay"></div>
                     </div>
                 </div>
             </section>
         </main>
 
+        <footer>
+            <div class="contain">
+                <a href="#gallery">Gallery</a>
+                <a href="#">Blog</a>
+                <a href="#">About</a>
+                <a href=""></a>
+                <div>
+                    <a href="index.html" class="logo">
+                        <span>U</span>nique <span>M.</span>
+                    </a>
+                    <p>
+                        All Rights Reserved &copy; 2024
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
