--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,11 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 24 | Day 3 · 04/25/24</h1>
+                    <h1>Week 24 | Day 4 · 04/26/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be working on our Personal
-                            Portfolio Site | Project.
+                            Today is a lab day.
                         </p>
                     </div>
 
@@ -24,8 +23,7 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll spend the whole class working on
-                                Personal Portfolio Site | Project.
+                                We'll spend the whole class in lab time.
                             </li>
                         </ul>
                     </div>
@@ -33,11 +31,10 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Would you eat lab grown meat? Would you consider
-                            it lab grown meat vegetarian, vegan, or neither?
+                            What is your go to smoothie flavor?
                             <span>
                                 <i><br>
-                                    (e.g.: Lab Grown Salmon cooked in a Dishwasher, yum!)
+                                    (e.g.: If you don't drink smoothies its okay!)
                                 </i>
                             </span>
                         </p>
