--- a/agenda/index.html
+++ b/agenda/index.html
@@ -53,10 +53,10 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — The Moon is shrinking.
+                            — German chocolate cake was invented in Texas.
                         </p>
                         <p class="additional-info">
-                            But only very slightly – by about 50m (164ft) in radius over the last several hundred million years. Mysterious seismic activity, known as moonquakes, could be to blame.
+                            By a man named Sam German, hence the name.
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
