--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -24,7 +24,7 @@
             <section id="middle">
                 <div class="card-holder">
                     <div class="card">
-                        <p>Working on Mebay Project.</p>
+                        <p>Working on Personal Portfolio Site Project.</p>
                     </div>
                     <div class="card">
                         <p>
@@ -64,7 +64,7 @@
                         Earth Lore:
                     </h2>
                     <p>
-                        Coral reefs are Earth's largest living structure.
+                        Mountains exist under the sea too.
                     </p>
                 </div>
             </section>
