--- a/portfolio copy/index.html
+++ b/portfolio copy/index.html
@@ -39,11 +39,13 @@
             <section id="cards">
                 <div class="contain">
                     <div class="card">
-                        <h2><a href="#"><span>A</span>bout</a></h2>
+                        <h2><span>A</span>bout</h2>
+                        <a href="#">Visit Page</a>
                         <div class="overlay"></div>
                     </div>
                     <div class="card">
-                        <h2><a href="#"><span>C</span>ontact</a></h2>
+                        <h2><span>C</span>ontact</h2>
+                        <a href="#">Visit Page</a>
                         <div class="overlay"></div>
                     </div>
                 </div>
