--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,11 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 24 | Day 4 · 04/26/24</h1>
+                    <h1>Week 26 | Day 5 · 05/13/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today is a lab day.
+                            Today we have our Final Exam starting at
+                            6:10 PM ET. 
                         </p>
                     </div>
 
@@ -23,7 +24,12 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll spend the whole class in lab time.
+                                We'll spend the first two hours of class
+                                taking the final exam.
+                            </li>
+                            <li>
+                                After, we'll work on and complete the
+                                JS Adventure Game Exercise.
                             </li>
                         </ul>
                     </div>
@@ -31,10 +37,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            What is your go to smoothie flavor?
+                            What has been your favorite thing to learn
+                            in this class?
                             <span>
                                 <i><br>
-                                    (e.g.: If you don't drink smoothies its okay!)
+                                    (e.g.: Transition, hover states, navigations, repsonsiveness, html, etc.)
                                 </i>
                             </span>
                         </p>
@@ -53,10 +60,12 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — German chocolate cake was invented in Texas.
+                            — Bats are the only mammal that can fly.
                         </p>
                         <p class="additional-info">
-                            By a man named Sam German, hence the name.
+                            Birds are not classified as mammals, they
+                            are avians. <br><span>This image is a real life photo
+                            of me during my time out.</span>
                             <!-- <a
                                 href="https://progressivepunctuation.com/"
                                 target="_blank">Check them out Here!
